<resources>
    <string name="app_name">WisataCiayumajakuning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="registrasi">Registrasi</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="kategori_wisata">Kategori Wisata</string>
    <string name="scroll_horizontal">Scroll horizontal</string>
    <string name="alam">Alam</string>
    <string name="pantai">Pantai</string>
    <string name="sejarah">Sejarah</string>
    <string name="kuliner">Kuliner</string>
    <string name="oleh_oleh">Oleh-Oleh</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="temapat_wisata">Tempat Wisata</string>
    <string name="button_image">button image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">SETTINGS</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="ubah_email">Ubah Email</string>
    <string name="lainnya">LAINNYA</string>
    <string name="log_out">Log Out</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="kota_wisata">Kota Wisata</string>
    <string name="rute_wisata">Rute Wisata</string>
    <string name="find_route">Find Route</string>
    <string name="deskripsi_wisata">Deskripsi Wisata</string>
    <string name="alamat_wisata">Alamat Wisata :</string>
    <string name="API_KEY">AIzaSyDSBK_d-5-06ZoK4StyqLKXJrnbPbZA2ww</string>
    <string name="lokasi_anda">Lokasi Anda:</string>
    <string name="current_location">current location</string>
    <string name="lokasi_tujuan">Lokasi Tujuan:</string>
    <string name="end_location">End Location</string>
    <string name="jarak_tempuh">Jarak Tempuh</string>
    <string name="waktu_tempuh">Waktu tempuh</string>
    <string name="update_alamat_email">Update Alamat Email</string>
    <string name="email_anda">Email Anda</string>
    <string name="autentikasi">Autentikasi</string>
    <string name="email_baru">Email Baru</string>
    <string name="update_email">Update Email</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="harga_tiket_masuk">Harga Tiket Masuk</string>
    <string name="umum">Umum :</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="oleh">Oleh</string>
    <string name="personal">PERSONAL</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="lainlain">Lainnya</string>
    <string name="turn_right">Turn Right</string>
    <string name="direction">Direction</string>
    <string name="swipe_up_for_more_info">Swipe Up For More Info</string>
    <string name="petunjuk_arah">Petunjuk Arah</string>
    <string name="headline">Headline</string>
    <string name="lokasi_awal">Lokasi Awal:</string>
    <string name="tolong_masukkan_email_anda_untuk_mengatur_ulang_kata_sandi">Tolong Masukkan Email Anda untuk Mengatur Ulang Kata Sandi</string>
    <string name="reset_password">Reset Password</string>
    <string name="deskripsi_tentang">Aplikasi Pariwisata Ciayumajakuning merupakan sebuah aplikasi berbasis android yang menyajikan informasi seputar objek wisata yang tersebar di wilayah Ciayumajakuning dan memberikan rute untuk memudahkan user menuju ke kolasi objek wisata tujuan</string>
    <string name="developer">Developer</string>
    <string name="fathimah_khonsa">Fathimah Khonsa</string>
    <string name="email_dev">khonsa.fathimah@gmail.com</string>
</resources>