<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/custom_layout_white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/lokasi_anda"
        android:textSize="12sp"
        android:textColor="@color/PrimaryDark"
        app:drawableStartCompat="@drawable/ic_location_grey" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nunitoreguler"
        android:text="@string/current_location"
        android:textSize="8sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/underline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/lokasi_tujuan"
        android:textColor="@color/PrimaryDark"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/endLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nunitomedium"
        android:text="@string/end_location"
        android:textSize="8sp"/>

</LinearLayout>