<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/tentang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tentang_aplikasi"
        android:textAlignment="center"
        android:textColor="@color/Primary"
        android:fontFamily="@font/nunitobold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/deskripsi_tentang"
        android:textColor="@color/Primary"
        android:fontFamily="@font/nunitomedium"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tentang"/>

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/developer"
        android:textColor="@color/Primary"
        android:fontFamily="@font/nunitobold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/deskripsi"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/developer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImg"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="1dp"
            android:src="@drawable/dev_pict"
            android:padding="2dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circle"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/profileImg"
            android:text="@string/fathimah_khonsa"
            android:textColor="@color/Primary"
            android:fontFamily="@font/nunitobold"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/profileImg"
            android:layout_below="@id/name"
            android:text="@string/email_dev"
            android:textColor="@color/SecondaryDark"
            android:fontFamily="@font/nunitomedium"
            android:textSize="13sp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>