<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/profile_pict"
                android:padding="2dp"
                app:shapeAppearanceOverlay="@style/circle"
                app:strokeColor="@color/Secondary"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/username"
                android:layout_toEndOf="@id/imgProfile"
                android:textSize="18sp"
                android:textColor="@color/PrimaryDark"
                android:fontFamily="@font/nunitobold"/>

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/email"
                android:layout_toEndOf="@id/imgProfile"
                android:layout_below="@id/username"
                android:textSize="14sp"
                android:textColor="@color/PrimaryDark"
                android:fontFamily="@font/nunitosemibold"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/cvProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textSize="18sp"
                android:textColor="@color/PrimaryDark"
                android:fontFamily="@font/nunitobold"/>

            <TextView
                android:id="@+id/editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/edit_profile"
                android:textSize="16sp"
                android:textColor="@color/PrimaryDark"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunitomedium"
                app:drawableStartCompat="@drawable/ic_profile"
                app:drawableEndCompat="@drawable/ic_next" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/underline" />

            <TextView
                android:id="@+id/hapusProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/hapus_akun"
                android:textSize="16sp"
                android:textColor="@color/PrimaryDark"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunitomedium"
                app:drawableStartCompat="@drawable/ic_delete"
                app:drawableEndCompat="@drawable/ic_next" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLainnya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/cvPersonal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lainnya"
                android:textSize="18sp"
                android:textColor="@color/PrimaryDark"
                android:fontFamily="@font/nunitobold"/>

            <TextView
                android:id="@+id/aboutTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tentang_aplikasi"
                android:textSize="16sp"
                android:textColor="@color/PrimaryDark"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunitomedium"
                app:drawableStartCompat="@drawable/ic_profile"
                app:drawableEndCompat="@drawable/ic_next" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/underline" />

            <TextView
                android:id="@+id/logoutTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/log_out"
                android:textSize="16sp"
                android:textColor="@color/PrimaryDark"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunitomedium"
                app:drawableStartCompat="@drawable/ic_logout"
                app:drawableEndCompat="@drawable/ic_next" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>